Moved integration tests to softwarearchitecture repo.